--- a/src/main/webapp/app/entities/favourite-player/favourite-player-dialog.html
+++ b/src/main/webapp/app/entities/favourite-player/favourite-player-dialog.html
@@ -13,7 +13,7 @@
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.favouritePlayer.id" readonly />
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label class="control-label" data-translate="baloncestoApp.favouritePlayer.favouriteDateTime" for="field_favouriteDateTime">Favourite Date Time</label>
                 <div class="input-group">
                     <input id="field_favouriteDateTime" type="text" class="form-control" name="favouriteDateTime" datetime-picker="{{dateformat}}" ng-model="vm.favouritePlayer.favouriteDateTime" is-open="vm.datePickerOpenStatus.favouriteDateTime"
@@ -22,7 +22,7 @@
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('favouriteDateTime')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
-        </div>
+        </div>-->
 
         <div class="form-group">
             <label data-translate="baloncestoApp.favouritePlayer.user" for="field_user">User</label>
