--- a/src/main/webapp/app/entities/game-rating/game-rating-dialog.html
+++ b/src/main/webapp/app/entities/game-rating/game-rating-dialog.html
@@ -19,7 +19,7 @@
                     ng-model="vm.gameRating.score"
                      />
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label class="control-label" data-translate="baloncestoApp.gameRating.scoreDateTime" for="field_scoreDateTime">Score Date Time</label>
                 <div class="input-group">
                     <input id="field_scoreDateTime" type="text" class="form-control" name="scoreDateTime" datetime-picker="{{dateformat}}" ng-model="vm.gameRating.scoreDateTime" is-open="vm.datePickerOpenStatus.scoreDateTime"
@@ -28,7 +28,7 @@
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('scoreDateTime')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
-        </div>
+        </div>-->
 
         <div class="form-group">
             <label data-translate="baloncestoApp.gameRating.user" for="field_user">User</label>
