Routing and views (AVG Game Rating and Info )

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="footer" ng-cloak>
-            <p data-translate="footer">This is your footer</p>
+            <p>Courtesy of Spring Papi, A.K.A Alfredo & Arnau García 2017©</p>
         </div>
     </div>
 
