--- a/src/main/webapp/app/entities/game-rating/game-ratings-avg.html
+++ b/src/main/webapp/app/entities/game-rating/game-ratings-avg.html
@@ -3,53 +3,40 @@
     <jhi-alert></jhi-alert>
 <br/>
     <div class="container-fluid">
-        
+
     </div>
 <div class="table-responsive">
+    <!--
+    {{vm.gameRatingsAvgAll}}
+    -->
     <table class="jh-table table table-striped">
         <thead>
         <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.reset()">
-            <th jh-sort-by="id"><span data-translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-            <th jh-sort-by="score"><span data-translate="baloncestoApp.gameRating.score">Score</span> <span class="glyphicon glyphicon-sort"></span></th>
-            <th jh-sort-by="scoreDateTime"><span data-translate="baloncestoApp.gameRating.scoreDateTime">Score Date Time</span> <span class="glyphicon glyphicon-sort"></span></th>
-            <th jh-sort-by="user.login"><span data-translate="baloncestoApp.gameRating.user">User</span> <span class="glyphicon glyphicon-sort"></span></th>
-            <th jh-sort-by="game.name"><span data-translate="baloncestoApp.gameRating.game">Game</span> <span class="glyphicon glyphicon-sort"></span></th>
-            <th></th>
+            <th><span>ID</span></th>
+            <th><span>LocalScore</span></th>
+            <th><span>VisitorScore</span></th>
+            <th><span>LocalTeam</span></th>
+
+            <th><span>VisitorTeam</span></th>
+            <th><span>GameName</span></th>
+            <th><span>AVG Game Rating</span></th>
+
         </tr>
         </thead>
         <tbody infinite-scroll="vm.loadPage(vm.page + 1)" infinite-scroll-disabled="vm.page >= vm.links['last']">
-        <tr ng-repeat="gameRating in vm.gameRatings track by gameRating.id">
-            <td><a ui-sref="game-rating-detail({id:gameRating.id})">{{gameRating.id}}</a></td>
-            <td>{{gameRating.score}}</td>
-            <td>{{gameRating.scoreDateTime | date:'medium'}}</td>
-            <td>
-                {{gameRating.user.login}}
-            </td>
+        <tr ng-repeat="gameRating in vm.gameRatingsAvgAll track by gameRating.game.id">
+            <td>{{gameRating.game.id}}</td>
+            <td>{{gameRating.game.localScore}}</td>
+            <td>{{gameRating.game.visitorScore}}</td>
+            <td>{{gameRating.game.localTeam.name}}</td>
+            <td>{{gameRating.game.visitorTeam.name}}</td>
             <td>
                 <a ui-sref="game-detail({id:gameRating.game.id})">{{gameRating.game.name}}</a>
             </td>
-            <td class="text-right">
-                <div class="btn-group flex-btn-group-container">
-                    <button type="submit"
-                            ui-sref="game-rating-detail({id:gameRating.id})"
-                            class="btn btn-info btn-sm">
-                        <span class="glyphicon glyphicon-eye-open"></span>
-                        <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
-                    </button>
-                    <button type="submit"
-                            ui-sref="game-rating.edit({id:gameRating.id})"
-                            class="btn btn-primary btn-sm">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
-                    </button>
-                    <button type="submit"
-                            ui-sref="game-rating.delete({id:gameRating.id})"
-                            class="btn btn-danger btn-sm">
-                        <span class="glyphicon glyphicon-remove-circle"></span>
-                        <span class="hidden-xs hidden-sm" data-translate="entity.action.delete"></span>
-                    </button>
-                </div>
+            <td>
+                {{gameRating.avgScore}}
             </td>
+
         </tr>
         </tbody>
     </table>
